# product-intelligence-backend-shopify

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SHOPIFY_PRODUCTS_GRAPHQL_GUIDELINE.md  agent_products.xlsx  app_context.py  auth.py  build.sh  cloudflare_tunnel.py  docker-compose.collabora.yml  docker-compose.debug.yml  docker-compose.stack.yml  graphql.config.yml  main.py  models.py  offload_worker.py  pyproject.toml  run.sh  sample_response_format.py  shopify-2025-10.schema  shopify.py  shopify_session_store.py  stop.sh  supabase_client.py  token_store.py
.github/: copilot-instructions.md
ai/: README_WORKFLOW.md  agent_client.py  agent_collector.py  collabora_utils.py  document_text_utils.py  excel_utils.py  excel_workflow.py  excel_writer.py  maf_workflow_instructions.md  models.py  product_mapper.py  prompt_loader.py  requirements_workflow.txt  run_workflow_example.py  test.py
api/: __init__.py  _run_logs.py  _run_logs_db.py  agents.py  files.py  wopi.py
collabora-setup/: Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  start.sh  wopi_server.py
collabora-setup/collabora_wopi_server/: app.py
docs/: issues-todo.md  pricing-model-assessment.md  production-release-checklist.md  source-link-debugging.md
graphql/: bulkOperationQuery.graphql  bulkOperationRunMutation.graphql  metafieldsSet.graphql  productByHandle.graphql  productCreate.graphql  productDelete.graphql  productMetafields.graphql  productMetafieldsAll.graphql  productOptionsCreate.graphql  productQuery.graphql  productSet.graphql  productUpdate.graphql  productVariantsBulkCreate.graphql  productVariantsBulkDelete.graphql  productsForAudit.graphql
objects/: __init__.py  sanitize.py  (+1 more)
(+264 files in other folders)
