[project]
name = "shopify-supabase-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-framework>=1.0.0b251108",
    "black>=25.11.0",
    "fastapi[standard]>=0.120.0",
    "httpx>=0.28.1",
    "ollama>=0.6.0",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.1.1",
    "supabase>=2.22.2",
]
