[project]
name = "collabora-wopi-server"
version = "0.1.0"
description = "WOPI server for Collabora Online integration"
authors = [
    {name = "Developer", email = "developer@example.com"}
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.2",
    "python-jose>=3.3.0",
    "cryptography>=41.0.7",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["collabora_wopi_server"]